--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ## Welcome to GitHub Pages
 
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/urankajtazaj/store-ms/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download urankajtazaj/store-ms on GitHub">Download</a>
+
 You can use the [editor on GitHub](https://github.com/urankajtazaj/urankajtazaj.github.com/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
 
 Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
@@ -35,3 +38,6 @@ Your Pages site will use the layout and styles from the Jekyll theme you have se
 ### Support or Contact
 
 Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
